/*
 * $Id: ChangeLog,v 1.1856 2003/12/12 05:31:19 jonnymind Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2003-12-11 11:12 UTC+0100 Przemyslaw Czerpak <druzus@polbox.com>
  * xharbour/source/rdd/dbfcdx/dbfcdx1.c
    * some workaround for GCC3.x bug in optimization

  * xharbour/source/rdd/dbf1.c
    * small fix for DBF files with corrupted header in exclusive mode

  * xharbour/source/rdd/dbffpt/dbffpt1.c
    * fixed typo in TRACELOG function name

  * xharbour/make_tgz.sh
  * xharbour/xharbour.spec
    - build libfm.a with memory statistic removed

  * xharbour/bin/hb-func.sh
  * xharbour/bin/postinst.sh
    + build libfm.a with memory statistic
    + next changes to make it msys compatible

2003-12-12 06:35 UTC+0100 Giancarlo Niccolai <antispam /at/ niccolai [dot] ws>
  * include/hblog.ch
    + Now supports shorter grammar:
      Log <msgs> PRIO [class] as a shortand for PRIO HB_LOG_[class]

  * include/hbrdddbf.h
    * For linux, exclusive lock values changed to 0,0.

  * source/rtl/errorsys.prg
    ? Added an extra "?" at the end of error reporting; this makes
    visualization clean also on consoles that do not add a CRLF at
    program termination (like unix...)

2003-12-11 13:33 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/rtl/hbserv.c
    + added to hrbdll.bc

2003-12-11 17:22 UTC+0100 Lorenzo Fiorini <lorenzo_fiorini/at/tin.it>
  * config/dos/watcom.cf
  * config/w32/watcom.cf
    * deleted x from the optimizations due to a known bug
      in OpenWatcom
  * source/vm/errorapi.c
    * added #ifdef HB_OS_DOS to build under OpenWatcom DOS
  * utils/hbdict/hbdict.prg
    * changed ThreadSleep(10) with HB_IDLESTATE()
      to build under OpenWatcom DOS

2003-12-11 15:48 UTC+0100 Giancarlo Niccolai <antispam /at/ niccolai [dot] ws>
  * source/rtl/hblog.prg
  * source/rtl/hblognet.prg